[I-Build-Tests] Remove unused consideration of Java extension directory
For current I-build tests java.ext.dir is never specified.